[package]
name = "relay_channel"
version = "0.1.1"
edition = "2024"
description = "A single-producer, single-consumer channel where the sender waits for the receiver to receive the message before returning."
license = "MIT"
repository = "https://github.com/davidspies/relay_channel"

[dependencies]
consume_on_drop = "0.1.1"
tokio = { version = "1.43.0", features = ["macros", "sync"] }
tokio-util = "0.7.13"

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["rt", "time"] }
