[package]
name = "relay_channel"
version = "0.1.1"
edition = "2024"
description = "A single-producer, single-consumer channel where the sender waits for the receiver to receive the message before returning."
license = "MIT"
repository = "https://github.com/davidspies/relay_channel"

[dependencies]
consume_on_drop = "0.1.1"
derive-where = "1.4.0"
sync_wrapper = "1.0.2"
tokio = { version = "1.43.0", features = ["sync"] }

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["macros", "rt", "time"] }
